--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "sqlite3": "^5.1.7"
   }
 }
