--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Brian Jemilo II<jemiloii@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "ansi-colors": "^4.1.3",
     "compression": "^1.7.4",
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "helmet": "^7.1.0",
+    "pg": "^8.13.0",
     "redirect-ssl": "^3.0.0",
     "sqlite3": "^5.1.7"
   }
