--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "helmet": "^7.1.0",
     "pg": "^8.13.0",
     "redirect-ssl": "^3.0.0",
