--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^7.1.0",
     "pg": "^8.13.0",
     "redirect-ssl": "^3.0.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "stripe": "^17.3.0"
   }
 }
