--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "helmet": "^7.1.0",
+    "nodemailer": "^6.9.16",
+    "nodemailer-direct-transport": "^3.3.2",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.0",
     "redirect-ssl": "^3.0.0",
     "sqlite3": "^5.1.7",
