--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "ansi-colors": "^4.1.3",
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
     "nodemailer-direct-transport": "^3.3.2",
     "passport": "^0.7.0",
